--- a/desktop.css
+++ b/desktop.css
@@ -49,10 +49,10 @@ section {border:1px solid black; margin:0 auto; width:100%; max-width:1510px;}
 
 .container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:auto;}
 
-.section-inner1 {background-color:darkslateblue; margin:0 40px; height:100px;}
-.main-colum-1 {background-color:red; width:33.3333%; height:100px; float:left;}
-.main-colum-2 {background-color:pink; width:33.3333%;  height:100px; float:left;}
-.main-colum-3 {background-color:yellow; width:33.3333%; height:100px; float:left;}
+.section-inner1 {background-color:darkslateblue; margin:0 40px; height:250px;}
+.main-colum-1 {background-color:red; width:33.3333%; height:200px; float:left;}
+.main-colum-2 {background-color:pink; width:33.3333%;  height:200px; float:left;}
+.main-colum-3 {background-color:yellow; width:33.3333%; height:200px; float:left;}
 
 .section-inner2 {background-color:darkslateblue; margin:0 40px; height:100px;}
 .main-colum-4 {background-color:green; width:50%; height:100px; float:left;}
@@ -98,15 +98,81 @@ footer {border:1px solid black;  margin:0 auto; width:100%; max-width:1510px;}
 
 
 /* slideshow */
+/*
 .mySlides {display:none;}
-.captext {display:inline; color:#ffffff; font-size: 1.5rem; padding:0 40px; position:relative; top:-80px; width:100%; text-align:left;}
+.captext {display:inline-block; color:#ffffff; font-size: 1.5rem; padding:0 40px; position:relative; top:-80px; width:100%; text-align:left;}
 .dot {display:inline-block; height: 0.3rem; width:2rem; margin:-1px; top:-70px; left:40px; background-color:#e3e3e3; transition:background-color 0.6s ease; position:relative; }
 .activedot {background-color:#00ff00;}
 .fade {-webkit-animation-name:fade; -webkit-animation-duration:1.5s; animation-name:fade; animation-duration:1.5s;}
+*/
 
 
 
+/* 지역별 분류 */
+.colum-title {padding:10px 0; font-weight:bold;}
+select, .inputbtn {padding:0 0.7rem; border:1px solid #9a9a9a; border-radius:5px;  height:1.5rem; font-family: inherit;}
+.search-region {width:120px;}
+.search-region-detail {width:150px;}
+.inputbtn {width:60px; text-align:center;}
 
+
+.meet-single {
+    display: block;
+    padding: 5px 10px;
+    border: 1px solid #d0d0d0;
+    background-color: #ffffff;
+    margin: 0 0 5px 0;
+}
+
+.meet-single-title {
+    font-size: 0.85em;
+    padding: 5px 0 3px 0;
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.meet-single-info {
+    font-size: 0.7em;
+    color: #adadad;
+    width: 100%;
+    padding-bottom: 5px;
+}
+
+.meet-single-region {
+color:#747474
+}
+
+.meet-single-category {
+    font-size: 10px;
+    padding: 3px;
+}
+
+.button-apply {
+    float: right;
+    padding: 1px;
+    font-size: 0.9em;
+    text-align: center;
+    width: 55px;
+    height: 2em;
+    border: 1px solid #c7c7c7;
+    color: #ffffff;
+    background-color: #c6c6c6;
+}
+
+.morebtn {
+    text-align: center;
+    font-size: 0.9em;
+    padding: 7px 0;
+    margin: 10px -10px -10px -10px;
+    border-top: 1px solid #e5e5e5;
+}
+
+.morebtn a {
+    text-decoration: none;
+    color: #727272;
+}
 
 
 
