--- a/tablet.css
+++ b/tablet.css
@@ -50,10 +50,10 @@ section {border:1px solid black; margin:0 auto; width:100%;}
 
 .container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:auto;}
 
-.section-inner1 {background-color:darkslateblue; margin:0 40px; height:600px;}
-.main-colum-1 {background-color:red; width:100%; height:200px; float:left;}
-.main-colum-2 {background-color:pink; width:100%;  height:200px; float:left;}
-.main-colum-3 {background-color:yellow; width:100%; height:200px; float:left;}
+.section-inner1 {background-color:darkslateblue; margin:0 40px; height:500px;}
+.main-colum-1 {background-color:red; width:100%; height:450px; float:left;}
+.main-colum-2 {background-color:pink; width:100%;  height:450px; float:left;}
+.main-colum-3 {background-color:yellow; width:100%; height:450px; float:left;}
 
 .section-inner2 {background-color:darkslateblue; margin:0 40px; height:200px;}
 .main-colum-4 {background-color:green; width:100%; height:100px; float:left;}
@@ -107,7 +107,7 @@ select, .inputbtn {padding:0 0.7rem; border:1px solid #9a9a9a; border-radius:5px
 .search-region {width:80px;}
 .search-region-detail {width:100px;}
 
-iframe {width:100%; height:150px;}
+iframe {width:100%; height:300px; scrolling:no;}
 
 
 
